[package]
name = "tealeaves"
version = "0.2.0"
authors = ["Peter Lyons <pete@peterlyons.com>"]

[dependencies]
base64 = "0.6.0"
clap = "2.27.1"
der-parser = "0.4.4"
nom = "3.2.1"
nom_pem = { path = "../nom_pem" }
# nom_pem = "1.0.4"
rsfs = "0.4.1"
rusticata-macros = "0.3.3"    # Helper macros for Rusticata
hex = "0.3.1"             # Encoding and decoding data into/from hexadecimal representation.
